# longan_rpc

./: CMakeLists.txt
src/: CMakeLists.txt  client.cpp
src/longan_proto/: .ai.grpc.pb.cc.swp  ai.grpc.pb.cc  ai.grpc.pb.h  ai.pb.cc  ai.pb.h
